Updates LC dane machine

--- a/mache/machines/dane.cfg
+++ b/mache/machines/dane.cfg
@@ -6,7 +6,7 @@
 group = e3sm
 
 # the compiler set to use for system libraries
-compiler = intel
+compiler = oneapi-ifx
 
 # the system MPI library
 mpi = mvapich2
@@ -21,7 +21,7 @@ base_path = /usr/workspace/e3sm/apps/e3sm-unified
 [diagnostics]
 
 # The base path to the diagnostics directory
-base_path = /usr/workspace/e3sm/data/diagnostics
+base_path = /p/vast1/e3sm/diagnostics
 
 # the unix group for permissions for diagnostics
 group = e3sm
