--- a/mache/machines/dane.cfg
+++ b/mache/machines/dane.cfg
@@ -17,7 +17,7 @@ base_path = /usr/workspace/e3sm/apps/e3sm-unified
 
 # whether to use E3SM modules for hdf5, netcdf-c, netcdf-fortran and pnetcdf
 # (spack modules are used otherwise)
-use_e3sm_hdf5_netcdf = True
+use_e3sm_hdf5_netcdf = False
 
 
 # config options related to data needed by diagnostics software such as
